syntax = "proto3";

package paymentPackage;

service Payment {
  rpc createPayment (PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string userId = 1;
  string amount = 2;
  string currency = 3;
}

message PaymentResponse {
  string status = 1;
  string transactionId = 2;
  string message = 3;
}